--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,7 +40,11 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           target: wasm32-unknown-unknown
-          cache-directories: |
+      - name: Cache Trunk install
+        uses: actions/cache@v3
+        with:
+          key: "trunk"
+          path: |
             $CARGO_HOME/.crates2.json
             $CARGO_HOME/bin/trunk
       - name: Install trunk
